[metadata]
name = oneview-redfish-toolkit
summary = OneView Redfish Toolkit
description-file =
    README.md
author = OneView Redfish Toolkit
author-email = redfish-toolkit-l@lsd.ufcg.edu.br
home-page = http://oneview-redfish-toolkit.github.io/
classifier =
    Environment :: Redfish
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    oneview_redfish_toolkit

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = oneview_redfish_toolkit/locale
domain = oneview_redfish_toolkit

[update_catalog]
domain = oneview_redfish_toolkit
output_dir = oneview_redfish_toolkit/locale
input_file = oneview_redfish_toolkit/locale/oneview_redfish_toolkit.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oneview_redfish_toolkit/locale/oneview_redfish_toolkit.pot
