[metadata]
name = oneview-redfish-toolkit
summary = 'This toolkit provides a REST service to answer DMTF\'s Redfish compliant requests by querying HPE OneView.'
description-file =
    README.md
description-content-type = text/markdown
long_description = file: README.md
long_description_content_type = text/markdown
author = Hewlett Packard Enterprise Development LP
author-email = oneview-redfish-toolkit@hpe.com
home-page = https://github.com/HewlettPackard/oneview-redfish-toolkit
license='Apache License 2.0'
classifier =
    Environment :: Web Environment
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    oneview_redfish_toolkit
package-data =
    oneview_redfish_toolkit = conf/*.conf
    oneview_redfish_toolkit = registry/*.json
    oneview_redfish_toolkit = schemas/*.json
    oneview_redfish_toolkit = all_subscription.json


[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = oneview_redfish_toolkit/locale
domain = oneview_redfish_toolkit

[update_catalog]
domain = oneview_redfish_toolkit
output_dir = oneview_redfish_toolkit/locale
input_file = oneview_redfish_toolkit/locale/oneview_redfish_toolkit.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oneview_redfish_toolkit/locale/oneview_redfish_toolkit.pot
